feature: add evaluation session entity